--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -71,7 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"Za jaden widobny rejtark schowaś">
 <!ENTITY Ctr_closei_def		"Standardne symbole">
 <!ENTITY Ctr_closeonleft	"Alternatiwna pozicija na rejtarku">
-<!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
+<!ENTITY Ctr_closetabbig	"Wětšy symbol (20x20 px)">
 <!ENTITY Ctr_close_wwltab	"Wokno ze slědnym widobnym rejtarkom zacyniś (about:config)">
 
 <!ENTITY Ctr_hctpinfotab	"Někotare rejtarkowe warianty njejsu kompatibelne z rozšyrjenim 'Hide Caption Titlebar Plus'.">
@@ -95,7 +95,7 @@
 <!ENTITY Ctr_appbuttonc_r	"Tłocaškowa barwa: Cerwjeny">
 <!ENTITY Ctr_appbuttonc_g	"Tłocaškowa barwa: Zeleny">
 <!ENTITY Ctr_appbuttonc_gr	"Tłocaškowa barwa: Šery">
-<!ENTITY Ctr_appbuttonc_pu	"Tłocaškowa barwa: Purpur">
+<!ENTITY Ctr_appbuttonc_pu	"Tłocaškowa barwa: Purpurny">
 <!ENTITY Ctr_appbuttonc_wh	"Tłocaškowa barwa: Běły">
 <!ENTITY Ctr_appbuttonc_cu	"Swójska tłocaškowa barwa">
 <!ENTITY Ctr_appbuttonct	"Swójska barwa za tłocašk na symbolowej rědce">
@@ -129,8 +129,8 @@
 <!ENTITY Ctr_options_rem	"Kategoriju se spomnjeś, kótaraž jo se ako slědna wubrała">
 <!ENTITY Ctr_svgfilters		"SVG-barwy za symbole tłocaškow symbolowych rědkow">
 <!ENTITY Ctr_wincontrols	"Pśesuwajobne wóźeńske elementy połneje wobrazowki">
-<!ENTITY Ctr_oldtoplevimg	"Wobraze 'nejwušeje domeny': klasiski wenkowny naglěd">
-<!ENTITY Ctr_altalertbox	"'Warnowański kašćik': alternatiwny wenkowny naglěd">
+<!ENTITY Ctr_oldtoplevimg	"Wobraze 'nejwušeje domeny': Klasiski wenkowny naglěd">
+<!ENTITY Ctr_altalertbox	"'Warnowański kašćik': Alternatiwny wenkowny naglěd">
 <!ENTITY Ctr_emptygfavico	"Powšykny fawority symbol wuměniś">
 <!ENTITY Ctr_mstatusbar		"Pśesuwajobny wobcerk statusoweje rědki">
 <!ENTITY Ctr_mstatusbars4e	"Wobcerk statusoweje rědki kontrolěrujo se pśez 'Status-4-Evar'">
@@ -139,8 +139,8 @@
 <!ENTITY Ctr_mstatusbarabr	"Wobcerk statusoweje rědki kontrolěrujo se pśez 'The Addon Bar (Restored)'">
 <!ENTITY Ctr_combrelstop	"Tłocaška Stoj a Znowego kombiněrowaś">
 <!ENTITY Ctr_stoprel1		"Wažny: Tłocašk Znowego za tłocaškom Stoj placěrowaś!">
-<!ENTITY Ctr_panelmenucol	"Pólowe menije: alternatiwna slězynowa barwa">
-<!ENTITY Ctr_hideprivmask	"Priwatny modus: maskowy pokazowaŕ schowaś">
+<!ENTITY Ctr_panelmenucol	"Pólowe menije: Alternatiwna slězynowa barwa">
+<!ENTITY Ctr_hideprivmask	"Priwatny modus: Maskowy pokazowaŕ schowaś">
 <!ENTITY Ctr_navsmallicons	"Małe symbole">
 <!ENTITY Ctr_navlargeicons	"Wjelike symbole">
 <!ENTITY Ctr_nbisizedelay0	"Wuwjeźeńske wokomuźenje">
@@ -156,40 +156,40 @@
 <!ENTITY Ctr_nav_txt_ico3	"Jano tekst pokazaś">
 <!ENTITY Ctr_nav_txt_exp	"Klasiske atributy (eksperimentelny):">
 <!ENTITY Ctr_iat_notf_vt	"Wertikalne rědki wuzamknuś">
-<!ENTITY Ctr_cpanelmenus	"Menijowe wuskokujuce wokna (cytańske znamjenja, historija atd.): kompaktny naglěd">
+<!ENTITY Ctr_cpanelmenus	"Menijowe wuskokujuce wokna (cytańske znamjenja, historija atd.): Kompaktny naglěd">
 <!ENTITY Ctr_hidezoomres	"Skalěrowańske elementy na symbolowej rědce: Tłocašk za slědkstajenje skalěrowanja schowaś">
-<!ENTITY Ctr_alt_newtabp	"Bok nowego rejtarka (about:newtab): alternatiwne wuglědanje">
+<!ENTITY Ctr_alt_newtabp	"Bok nowego rejtarka (about:newtab): Alternatiwne wuglědanje">
 <!ENTITY Ctr_ctroldsearch	"Stare pytanje">
 <!ENTITY Ctr_ctroldsearchc	"Pó pytanju pytańske pólo wuprozniś">
 <!ENTITY Ctr_search_oit		"Pytanje w nowem rejtarku wócyniś (about:config preference)">
-<!ENTITY Ctr_osearch_meoit	"Srjejźne kliknjenja: pytanje w nowem 'prědkowem rejtarku'">
+<!ENTITY Ctr_osearch_meoit	"Srjejźne kliknjenja: Pytanje w nowem 'prědkowem rejtarku'">
 <!ENTITY Ctr_osearch_dm		"Mały wuběrański tłocašk">
 <!ENTITY Ctr_addonmanager	"Zastojnik dodankow">
-<!ENTITY Ctr_alt_addonsp	"'Bok Dalšne info': alternatiwny pórěd">
+<!ENTITY Ctr_alt_addonsp	"'Bok Dalšne info': Alternatiwny pórěd">
 <!ENTITY Ctr_alt_addonsm	"Alternatiwny naglěd">
 <!ENTITY Ctr_am_nowarning	"Lisćiny dodankow: Warnowanja schowaś">
-<!ENTITY Ctr_am_compact		"Lisćiny dodankow: kompaktny naglěd">
+<!ENTITY Ctr_am_compact		"Lisćiny dodankow: Kompaktny naglěd">
 <!ENTITY Ctr_am_compact2	"Kompaktny naglěd +">
-<!ENTITY Ctr_am_highlight	"Lisćiny dodankow: zapisk pśez hover wuzwignuś">
-<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
-<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
-<!ENTITY Ctr_addonversion	"Lisćiny dodankow: wersiju dodanka pokazaś">
+<!ENTITY Ctr_am_highlight	"Lisćiny dodankow: Zapisk pśez hover wuzwignuś">
+<!ENTITY Ctr_am_buticons	"Lisćiny dodankow: Popise tłocaškow pśez symbole wuměniś">
+<!ENTITY Ctr_am_hovshowb	"Lisćiny dodankow: Tłocaški jano pśi 'hover' pokazaś">
+<!ENTITY Ctr_addonversion	"Lisćiny dodankow: Wersiju dodanka pokazaś">
 <!ENTITY Ctr_xpinstallui	"Stare dodankowe instalěrowańske wokno (nastajenje about:config)">
 <!ENTITY Ctr_bmbutton		"Tłocašk menija cytańskich znamjenjow">
-<!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
-<!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
-<!ENTITY Ctr_bmbutpanelm	"Wuskokujucy meni: naglěd menijowego wuskokujucego wokna">
-<!ENTITY Ctr_bmbunsortbm	"Wuskokujucy meni: meni 'Njesortěrowane cytańske znamjenja'">
+<!ENTITY Ctr_hiderecentbm	"Wuskokujuce wokno cytańskich znamjenjow: Njedawno pśidany cytańske znamjenja schowaś">
+<!ENTITY Ctr_hideeditbm		"Gwězdku cytańskich znamjenjow: Wuskokujuce wokno schowaś (jolic bok njejo ako cytańske znamje skłaźony)">
+<!ENTITY Ctr_bmbutpanelm	"Wuskokujucy meni: Naglěd menijowego wuskokujucego wokna">
+<!ENTITY Ctr_bmbunsortbm	"Wuskokujucy meni: Meni 'Njesortěrowane cytańske znamjenja'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad cytańskimi znamjenjami">
 <!ENTITY Ctr_bmbviewbmtb	"Wuskokujucy meni: 'Rědku cytańskich znamjenjow pokazaś' pokazaś">
 <!ENTITY Ctr_bmbnounsort	"Wuskokujucy meni: 'Njesortěrowane cytańske znamjenja' schowaś">
 <!ENTITY Ctr_bmbutnotext	"Tekst na rědce cytańskich znamjenjow schowaś">
-<!ENTITY Ctr_skipprintpr	"Śišćarski tłocašk: śišćarski pśeglěd pśeskócyś">
-<!ENTITY Ctr_tbconmenu		"Kontekstowy meni symboloweje rědki: 'do menija pśesunuś', 'ze symboloweje rědki wótpóraś', 'wšykne rejtaki znowego zacytaś/ako cytańske znamje składowaś' a 'rejtark zacyniś anulěrowaś' schowaś">
+<!ENTITY Ctr_skipprintpr	"Śišćarski tłocašk: Śišćarski pśeglěd pśeskócyś">
+<!ENTITY Ctr_tbconmenu		"Kontekstowy meni symboloweje rědki: 'Do menija pśesunuś', 'ze symboloweje rědki wótpóraś', 'wšykne rejtaki znowego zacytaś/ako cytańske znamje składowaś' a 'rejtark zacyniś anulěrowaś' schowaś">
 <!ENTITY Ctr_noresizerxp	"Pśeměnjak wjelikosći schowaś (Windows XP)">
 <!ENTITY Ctr_extraurlkeycb	"Pśidatne adresowe pólo wócyniś (Cmd/Strg+">
 <!ENTITY Ctr_pmhidelabels	"Wuskokujuce wokno głownego menija: Tekst tłocaškow schowaś">
-<!ENTITY Ctr_menupopupscr	"Wuskokujuce menije: suwate rědki město suwatych šypkow pokazaś">
+<!ENTITY Ctr_menupopupscr	"Wuskokujuce menije: Suwate rědki město suwatych šypkow pokazaś">
 <!ENTITY Ctr_closegeneral	"Powšykne zacynjańske symbole">
 
 <!ENTITY Ctr_tabsep_def		"Standardne rejtarkowe źěleńske smužki">
@@ -238,15 +238,15 @@
 <!ENTITY Ctr_urlbardropm2	"Tłocašk špica šypki pśecej pokazaś">
 <!ENTITY Ctr_altreaderico	"Alternatiwne 'cytakowe' symbole">
 <!ENTITY Ctr_hideprbutton	"Zdźěleński symbol schowaś, gaž wuskokujuce wokno se blokěrujo">
-<!ENTITY Ctr_urlbar_uc		"Disable 'Unified autocomplete' feature (about:config preference)">
+<!ENTITY Ctr_urlbar_uc		"Funkciju 'Zjadnośone awotwudopołnjenje' znjemóžniś (nastajenje about:config)">
 <!ENTITY Ctr_locsearchbw10	"Wusokosć adresowych a pytańskich pólow reducěrowaś (eksperimentelne)">
 <!ENTITY Ctr_urlbar_ib		"Tłocašk sedłoweje identity">
 <!ENTITY Ctr_ib_nohovcolor	"Šeru barwu pód kursorom myški njepokazaś">
 <!ENTITY Ctr_ib_graycolor	"Šera barwa za njeznate identitowe boki a boki chrome">
 <!ENTITY Ctr_verifiedcolors	"Tłocaškowe barwy za pśeglědane websedła, wěste a njewěste zwiski">
-<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
-<!ENTITY Ctr_ibinfoico2		"Hide 'i'-icon (if possible)">
-<!ENTITY Ctr_iblabels		"Hide labels">
+<!ENTITY Ctr_ibinfoico		"'i'-symbol pśez globusowy symbol wuměniś">
+<!ENTITY Ctr_ibinfoico2		"'i'-symbol schować (jolic móžno)">
+<!ENTITY Ctr_iblabels		"Popise schowaś">
 <!ENTITY Ctr_faviconurl		"Faworitowy symbol">
 <!ENTITY Ctr_padlock		"Pytkowy symbol za wěste zwiski">
 <!ENTITY Ctr_padlock_hid	"schowany">
@@ -254,7 +254,7 @@
 <!ENTITY Ctr_padlock_cla	"klasiski">
 <!ENTITY Ctr_padlock_mod	"moderny">
 <!ENTITY Ctr_padlock_ext	"Symbol '&brandShortName;' za płaśiwe boki 'about'">
-<!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
+<!ENTITY Ctr_icopageinfo	"Faworitowy symbol/globusowy symbol/'i'-symbol: 'Kliknjenje' wokno 'Info wó boku' wócynja">
 <!ENTITY Ctr_lbsbsize		"Swójska šyrokosć za adresowe pólo a pytańske pólo">
 <!ENTITY Ctr_searchbar		"Pytańske pólo">
 <!ENTITY Ctr_lbsugresi		"Tak wjele wuslědkow ako móžno we wuskokujucem meniju naraźenjow pokazaá (bźez suwańskeje rědki)">
@@ -307,11 +307,11 @@
 <!ENTITY Ctr_nonavbarbg1	"Wustatkujo se na pśidatne rědki a druge górne rědki.">
 <!ENTITY Ctr_nonavbarbg2	"Nastajenje ma wustatkowanje na wšykne rědki w pśedstajenju Slim dodanka 'Beyond Australis'.">
 <!ENTITY Ctr_nonavborder	"Górny ramik symbolowej rědce pśidaś">
-<!ENTITY Ctr_nonavtbborder	"Górne symbolowe rědki: ramiki symboloweje rědki wótpóraś">
+<!ENTITY Ctr_nonavtbborder	"Górne symbolowe rědki: Ramiki symboloweje rědki wótpóraś">
 <!ENTITY Ctr_hidesbclose	"Bócnice: Tłocašk 'Zacyniś' bócnice schowaś">
-<!ENTITY Ctr_notextshadow	"Symbolowe rědki: seń za tekst symboloweje rědki a rejtarki schowaś">
-<!ENTITY Ctr_chevronfix		"Nawigaciska rědka: dwójnu šypku ('Dalšne rědy') na kóńcu rědki schowaś">
-<!ENTITY Ctr_tbsep_winc		"Górjejcne symbolowe rědki: pśidatne źěleńske linije">
+<!ENTITY Ctr_notextshadow	"Symbolowe rědki: Seń za tekst symboloweje rědki a rejtarki schowaś">
+<!ENTITY Ctr_chevronfix		"Nawigaciska rědka: Dwójnu šypku ('Dalšne rědy') na kóńcu rědki schowaś">
+<!ENTITY Ctr_tbsep_winc		"Górjejcne symbolowe rědki: Pśidatne źěleńske linije">
 
 <!ENTITY Ctr_closeabarbut	"Tłocašk 'Zacyniś' na rědce dodankow schowaś">
 <!ENTITY Ctr_highaddonsbar	"Wusokosć pówětšyś">
@@ -338,7 +338,7 @@
 
 <!ENTITY Ctr_experttweaks	"Rozšyrjone">
 <!ENTITY Ctr_fx34search		"Gaž znjemóžnijośo toś to nastajenje, wótnowijośo 'stary pytański pówjerch'.">
-<!ENTITY Ctr_fx34loop		"Gaž znjemóžnijośo toś to nastajenje, se wótpóraju.">
+<!ENTITY Ctr_fx34loop		"Gaž znjemóžnijośo toś to nastajenje, se zawołańske a konwersaciske funkcije wótpóraju.">
 <!ENTITY Ctr_fx35devtheme	"Gaž znjemóžnijośo toś te nastajenja, se 'wuwijarska drastwa' a jeje tłocašk w pśiměrjeńskem modusu znjemóžnjatej.">
 <!ENTITY Ctr_fx36prefs		"Gaž znjemóžnijośo toś to nastajenje, se stare wokno nastajenjow wótnowijo.">
 <!ENTITY Ctr_fx36prefs2		"Glědajśo: Stare wokno nastajenjow njewopśimujo wšykne njedawno pśidane nastajenja wobglědowaka!">
