--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -123,8 +123,8 @@
 <!ENTITY Ctr_altoptionsd	"Προεπιλεγμένη εμφάνιση">
 <!ENTITY Ctr_altoptionsp	"Εναλλακτική εμφάνιση">
 <!ENTITY Ctr_altoptionsw	"Άνοιγμα σελίδας επιλογών σε παράθυρο">
-<!ENTITY Ctr_altoptionsww	"Εύρος">
-<!ENTITY Ctr_altoptionswh	"Ύψος">
+<!ENTITY Ctr_altoptionsww	"Εύρος:">
+<!ENTITY Ctr_altoptionswh	"Ύψος:">
 <!ENTITY Ctr_altoptionsi	"Το προσομοιωμένο παράθυρο επιλογών δεν είναι πια παράθυρο διαλόγου, αλλά ένα «παράθυρο περιηγητή» με όλες τις εργαλειοθήκες σε απόκρυψη. Το χαρακτηριστικό «Χρήση τρέχουσας σελίδας» προσθέτει μόνο τις διευθύνσεις URL των ανοιγμένων στο τρέχον παράθυρο σελίδων, που είναι μόνο «about:preferences» σε αυτή την περίπτωση. Το κουμπί εργαλειοθήκης «Επιλογές» αντικαθίσταται από ένα νέο, για να είναι δυνατόν το άνοιγμα επιλογών σε παράθυρο.">
 <!ENTITY Ctr_options_rem	"Απομνημόνευση τελευταία επιλεχθείσας κατηγορίας">
 <!ENTITY Ctr_svgfilters		"Χρώματα SVG για προεπιλεγμένα εικονίδια κουμπιών εργαλειοθήκης">
@@ -245,8 +245,8 @@
 <!ENTITY Ctr_ib_graycolor	"Γκρι χρώμα για αγνώστου ταυτότητας και «Chrome» σελίδες">
 <!ENTITY Ctr_verifiedcolors	"Χρώματα κουμπιού για επαληθευμένες ιστοσελίδες, ασφαλείς και μη ασφαλείς συνδέσεις">
 <!ENTITY Ctr_ibinfoico		"Αντικατάσταση εικονιδίου «i» με εικονίδιο υδρογείου">
-<!ENTITY Ctr_ibinfoico2		"Hide 'i'-icon (if possible)">
-<!ENTITY Ctr_iblabels		"Hide labels">
+<!ENTITY Ctr_ibinfoico2		"Απόκρυψη εικονιδίου «i» (εάν είναι δυνατόν)">
+<!ENTITY Ctr_iblabels		"Απόκρυψη ετικετών">
 <!ENTITY Ctr_faviconurl		"Εικονίδιο URL: τρέχον εικονίδιο τοποθεσιών">
 <!ENTITY Ctr_padlock		"Εικονίδιο «Λουκέτο» για ασφαλείς συνδέσεις">
 <!ENTITY Ctr_padlock_hid	"κρυμμένο">
@@ -254,7 +254,7 @@
 <!ENTITY Ctr_padlock_cla	"κλασικό">
 <!ENTITY Ctr_padlock_mod	"μοντέρνο">
 <!ENTITY Ctr_padlock_ext	"Εικονίδιο «&brandShortName;» για έγκυρες σελίδες «about»">
-<!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
+<!ENTITY Ctr_icopageinfo	"Εικονίδιο υδρογείου/ιστότοπου/«i»: Άνοιγμα παραθύρου «Πληροφορίες σελίδας» με κλικ στο εικονίδιο">
 <!ENTITY Ctr_lbsbsize		"Προσαρμοσμένο εύρος γραμμών διευθύνσεων και αναζήτησης">
 <!ENTITY Ctr_searchbar		"Γραμμή αναζήτησης">
 <!ENTITY Ctr_lbsugresi		"Προβολή όσο το δυνατόν περισσότερων αποτελεσμάτων στο αναδυόμενο υποδείξεων (χωρίς γραμμή κύλισης)">
@@ -315,7 +315,7 @@
 
 <!ENTITY Ctr_closeabarbut	"Απόκρυψη κουμπιού κλεισίματος εργαλειοθήκης πρόσθετων">
 <!ENTITY Ctr_highaddonsbar	"Αύξηση ύψους">
-<!ENTITY Ctr_lessaddonsbar	"Decrease height">
+<!ENTITY Ctr_lessaddonsbar	"Μείωση ύψους">
 <!ENTITY Ctr_addonbarfs		"Εμφάνιση σε προβολή πλήρους οθόνης">
 
 <!ENTITY Ctr_animation		"Κινησιομοίωση">
