--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -61,7 +61,7 @@
 <!ENTITY Ctr_emptytfavico_n	"Žadyn">
 <!ENTITY Ctr_emptytfavico_g	"Powšitkowny">
 <!ENTITY Ctr_noemptypticon	"Prózdny faworitowy symbol z připinjeneho rajtarka wotstronić">
-<!ENTITY Ctr_e10stab_notd	"E10s-rajtarki: podsmužku wotstronić">
+<!ENTITY Ctr_e10stab_notd	"E10s-rajtarki: Podsmužku wotstronić">
 <!ENTITY Ctr_closetab_0		"Rajtark začinić">
 <!ENTITY Ctr_closetab_1		"Jenož na aktiwnym rajtarku">
 <!ENTITY Ctr_closetab_2		"Nihdźe">
@@ -71,7 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"Za jedyn widźomny rajtark schować">
 <!ENTITY Ctr_closei_def		"Standardne symbole">
 <!ENTITY Ctr_closeonleft	"Alternatiwna pozicija na rajtarku">
-<!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
+<!ENTITY Ctr_closetabbig	"Wjetši symbol (20x20 px)">
 <!ENTITY Ctr_close_wwltab	"Wokno z poslednim widźomnym rajtarkom začinić (about:config)">
 
 <!ENTITY Ctr_hctpinfotab	"Někotre rajtarkowe warianty z rozšěrjenjom 'Hide Caption Titlebar Plus' kompatibelne njejsu.">
@@ -129,8 +129,8 @@
 <!ENTITY Ctr_options_rem	"Kategoriju sej spomjatkować, kotraž je so jako poslednja wubrała">
 <!ENTITY Ctr_svgfilters		"SVG-barby za symbole standardnych tłóčatkow">
 <!ENTITY Ctr_wincontrols	"Přesuwajomne wodźenske elementy połneje wobrazowki">
-<!ENTITY Ctr_oldtoplevimg	"Wobrazy 'najwyšeje domeny': klasiski zwonkowny napohlad">
-<!ENTITY Ctr_altalertbox	"'Warnowanski kašćik': alternatiwny zwonkowny napohlad">
+<!ENTITY Ctr_oldtoplevimg	"Wobrazy 'najwyšeje domeny': Klasiski zwonkowny napohlad">
+<!ENTITY Ctr_altalertbox	"'Warnowanski kašćik': Alternatiwny zwonkowny napohlad">
 <!ENTITY Ctr_emptygfavico	"Powšitkowny faworitowy symbol wuměnić">
 <!ENTITY Ctr_mstatusbar		"Přesuwajomny wobłuk statusoweje lajsty">
 <!ENTITY Ctr_mstatusbars4e	"Statusowy wobłuk seo přez 'Status-4-Evar' kontroluje">
@@ -139,8 +139,8 @@
 <!ENTITY Ctr_mstatusbarabr	"Statusowy wobłuk so přez 'The Addon Bar (Restored)' komtroluje">
 <!ENTITY Ctr_combrelstop	"Tłóčatce Stój a Znowa kombinować">
 <!ENTITY Ctr_stoprel1		"Wažny: Tłóčatko Znowa za tłóčatkom Stój zaměstnić!">
-<!ENTITY Ctr_panelmenucol	"Menijowe wuskakowace wokna: alternatiwna pozadkowa barba">
-<!ENTITY Ctr_hideprivmask	"Priwatny modus: maskowy pokazowar schować">
+<!ENTITY Ctr_panelmenucol	"Menijowe wuskakowace wokna: Alternatiwna pozadkowa barba">
+<!ENTITY Ctr_hideprivmask	"Priwatny modus: Maskowy pokazowar schować">
 <!ENTITY Ctr_navsmallicons	"Małe symbole">
 <!ENTITY Ctr_navlargeicons	"Wulke symbole">
 <!ENTITY Ctr_nbisizedelay0	"Komdźenje wuwjedźenja w ms">
@@ -156,40 +156,40 @@
 <!ENTITY Ctr_nav_txt_ico3	"Jenož tekst pokazać">
 <!ENTITY Ctr_nav_txt_exp	"Klasiske atributy (eksperimentelny):">
 <!ENTITY Ctr_iat_notf_vt	"Wertikalne symbolowe lajsty wuzamknyć">
-<!ENTITY Ctr_cpanelmenus	"Menijowe wuskakowace wokna (čitanske znamjenja, historija atd.): kompaktny napohlad">
+<!ENTITY Ctr_cpanelmenus	"Menijowe wuskakowace wokna (čitanske znamjenja, historija atd.): Kompaktny napohlad">
 <!ENTITY Ctr_hidezoomres	"Skalowanske elementy na symbolowej lajsće: Tłóčatko za wróćostajenje skalowanja schować">
-<!ENTITY Ctr_alt_newtabp	"Strona noweho rajtarka (about:newtab): alternatiwny napohlad">
+<!ENTITY Ctr_alt_newtabp	"Strona noweho rajtarka (about:newtab): Alternatiwny napohlad">
 <!ENTITY Ctr_ctroldsearch	"Stare pytanje">
 <!ENTITY Ctr_ctroldsearchc	"Po pytanju pytanske polo wuprózdnić">
 <!ENTITY Ctr_search_oit		"Pytanje w nowym rajtarku wočinić (about:config preference)">
-<!ENTITY Ctr_osearch_meoit	"Srjedźne kliknjenja: w nowym 'prědkowym rajtarku' pytać">
+<!ENTITY Ctr_osearch_meoit	"Srjedźne kliknjenja: W nowym 'prědkowym rajtarku' pytać">
 <!ENTITY Ctr_osearch_dm		"Małe wuběranske tłóčatko">
 <!ENTITY Ctr_addonmanager	"Zrjadowak přidatkow">
-<!ENTITY Ctr_alt_addonsp	"Strona 'wjace info': alternatiwny porjad">
+<!ENTITY Ctr_alt_addonsp	"Strona 'wjace info': Alternatiwny porjad">
 <!ENTITY Ctr_alt_addonsm	"Alternatiwny napohlad">
 <!ENTITY Ctr_am_nowarning	"Lisćiny přidatkow: Warnowanja schować">
-<!ENTITY Ctr_am_compact		"Lisćiny přidatkow: kompatkny napohlad">
+<!ENTITY Ctr_am_compact		"Lisćiny přidatkow: Kompaktny napohlad">
 <!ENTITY Ctr_am_compact2	"Kompaktny napohlad +">
-<!ENTITY Ctr_am_highlight	"Lisćiny přidatkow: zapisk přez hover wuzběhnyć">
-<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
-<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
+<!ENTITY Ctr_am_highlight	"Lisćiny přidatkow: Zapisk přez hover wuzběhnyć">
+<!ENTITY Ctr_am_buticons	"Lisćiny přidatkow: Popisy tłóčatko přez symbole wuměnić">
+<!ENTITY Ctr_am_hovshowb	"Lisćiny přidatkow: Tłóčatka jenož při 'hover' pokazać">
 <!ENTITY Ctr_addonversion	"Lisćiny přidatkow: Wersiju přidatka pokazać">
 <!ENTITY Ctr_xpinstallui	"Stary přidatkowe instalowanske wokno (nastajenje about:config)">
 <!ENTITY Ctr_bmbutton		"Tłóčatko menija zapołožkow">
-<!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
-<!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
-<!ENTITY Ctr_bmbutpanelm	"Wuskakowacy meni: napohlad wuskakowaceho menija">
-<!ENTITY Ctr_bmbunsortbm	"Wuskakowacy meni: meni 'Njesortěrowane zapołožki'">
+<!ENTITY Ctr_hiderecentbm	"Wuskakowace wokno zapołožkow: Njedawo přidate zapołožki schować">
+<!ENTITY Ctr_hideeditbm		"Hwěžka zapołožkow: Wuskakowace wokno schować (jeli strona jako zapołožka składowana njeje)">
+<!ENTITY Ctr_bmbutpanelm	"Wuskakowacy meni: Napohlad wuskakowaceho menija">
+<!ENTITY Ctr_bmbunsortbm	"Wuskakowacy meni: Meni 'Njesortěrowane zapołožki'">
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad zapołožkami">
 <!ENTITY Ctr_bmbviewbmtb	"Wuskakowacy meni: 'Lajstu zapołožkow pokazać' pokazać">
 <!ENTITY Ctr_bmbnounsort	"Wuskakowcy meni: 'Njesortěrowane zapołožki' schować">
 <!ENTITY Ctr_bmbutnotext	"Tekst na lajśce zapołožkow schować">
-<!ENTITY Ctr_skipprintpr	"Ćišćerske tłóčatko: ćišćerski přehlad přeskočić">
+<!ENTITY Ctr_skipprintpr	"Ćišćerske tłóčatko: Ćišćerski přehlad přeskočić">
 <!ENTITY Ctr_tbconmenu		"Kontekstowy meni symboloweje lajsty: 'Do menija přesunyć', 'Ze symboloweje lajsty wotstronić', 'Wšě rajtarki znowa začitać/jako zapołožki składować' a 'Začinjenje rajtarka cofnyć' schować">
 <!ENTITY Ctr_noresizerxp	"Přeměnjowak wulkosće schować (Windows XP)">
 <!ENTITY Ctr_extraurlkeycb	"Přidatne adresowe polo wočinić (Cmd/Strg+">
 <!ENTITY Ctr_pmhidelabels	"Wuskakowace wokno hłowneho menija: Tekst tłóčatkow schować">
-<!ENTITY Ctr_menupopupscr	"Menijowe wuskakowace wokna: suwanske lajsty město suwanskich šipkow pokazać">
+<!ENTITY Ctr_menupopupscr	"Menijowe wuskakowace wokna: Suwanske lajsty město suwanskich šipkow pokazać">
 <!ENTITY Ctr_closegeneral	"Powšitkowne začinjenske symbole">
 
 <!ENTITY Ctr_tabsep_def		"Standardne rajtarkowe dźělatka">
@@ -233,20 +233,20 @@
 <!ENTITY Ctr_hideurelstop	"Tłóčatce Stój a Znowa adresowych lajstow schować">
 <!ENTITY Ctr_hideurelstop2	"Tłóčatko 'Start' přeco pokazać">
 <!ENTITY Ctr_hideurlgo		"Tłóčatko 'Start' schować">
-<!ENTITY Ctr_hideurlsrg		"Dźělatka a mjezery za tłošatka 'Znowa, Stój a Start' schować">
+<!ENTITY Ctr_hideurlsrg		"Dźělatka a mjezery za tłóčatka 'Znowa, Stój a Start' schować">
 <!ENTITY Ctr_urlbardropm	"Tłóčatko šipkoweho kónčka do poslednjeje móžneje pozicije přesunyć">
-<!ENTITY Ctr_urlbardropm2	"Tłóčtko šipkoweho kónčka přeco pokazać">
-<!ENTITY Ctr_altreaderico	"Alternatiwne 'čitakowe' symbolei">
+<!ENTITY Ctr_urlbardropm2	"Tłóčatko šipkoweho kónčka přeco pokazać">
+<!ENTITY Ctr_altreaderico	"Alternatiwne 'čitakowe' symbole">
 <!ENTITY Ctr_hideprbutton	"Zdźělenski symbol schować, hdyž so wuskakowace wokno blokuje">
-<!ENTITY Ctr_urlbar_uc		"Disable 'Unified autocomplete' feature (about:config preference)">
+<!ENTITY Ctr_urlbar_uc		"Funkciju 'Zjednoćene awtowudospołnjenje' znjemóžnić (nastajenje about:config)">
 <!ENTITY Ctr_locsearchbw10	"Wysokosć adresowych a pytanskich polow redukować (eksperimentelne)">
 <!ENTITY Ctr_urlbar_ib		"Tłóčatko sydłoweje identity">
 <!ENTITY Ctr_ib_nohovcolor	"Pod kursorom myški šěru barbu njepokazać">
 <!ENTITY Ctr_ib_graycolor	"Šěra barba za njeznate identitowe strony a strony 'chrome'">
 <!ENTITY Ctr_verifiedcolors	"Tłóčatkowe barby za přepruwowane websydła, wěste a njewěste zwiski">
-<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
-<!ENTITY Ctr_ibinfoico2		"Hide 'i'-icon (if possible)">
-<!ENTITY Ctr_iblabels		"Hide labels">
+<!ENTITY Ctr_ibinfoico		"'i'-symbol přez globusowy symbol wuměnić">
+<!ENTITY Ctr_ibinfoico2		"'i'-symbol schować (jeli móžno)">
+<!ENTITY Ctr_iblabels		"Popisy schować">
 <!ENTITY Ctr_faviconurl		"Faworitowy symbol">
 <!ENTITY Ctr_padlock		"Zamkowy symbol za wěste zwiski">
 <!ENTITY Ctr_padlock_hid	"schowany">
@@ -254,7 +254,7 @@
 <!ENTITY Ctr_padlock_cla	"klasiski">
 <!ENTITY Ctr_padlock_mod	"moderny">
 <!ENTITY Ctr_padlock_ext	"Symbol '&brandShortName;' za płaćiwe strony 'about'">
-<!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
+<!ENTITY Ctr_icopageinfo	"Faworitowy symbol/globusowy symbol/'i'-symbol: 'Kliknjenje' wokno 'Info wo stronje' wočinja">
 <!ENTITY Ctr_lbsbsize		"Swójska šěrokosć za adresowe polo a pytanske polo">
 <!ENTITY Ctr_searchbar		"Pytanske polo">
 <!ENTITY Ctr_lbsugresi		"Tak wjele wuslědkow kaž móžno we wuskakowacym meniju namjetow pokazać (bjez suwanskeje lajsty)">
@@ -307,15 +307,15 @@
 <!ENTITY Ctr_nonavbarbg1	"Wuskutkuje so na přidatne lajsty tutoho přidatka a na druhe hornje lajsty.">
 <!ENTITY Ctr_nonavbarbg2	"Wuskutkuje so na wšě lajsty powjercha Slim přidatka 'Beyond Australis'.">
 <!ENTITY Ctr_nonavborder	"Horni ramik symbolowej lajsće přidać">
-<!ENTITY Ctr_nonavtbborder	"Hornje symbolowe lajsty: ramiki symboloweje lajsty wotstronić">
+<!ENTITY Ctr_nonavtbborder	"Hornje symbolowe lajsty: Ramiki symboloweje lajsty wotstronić">
 <!ENTITY Ctr_hidesbclose	"Bóčnicy: Tłóčatko Začinić bóčnicy schować">
-<!ENTITY Ctr_notextshadow	"Symbolowe lajsty: sćin za tekst symboloweje lajsty a rajtarki schować">
-<!ENTITY Ctr_chevronfix		"Nawigaciska lajsta: dwójny šipk ('Dalše nastroje') na kóncu symboloweje lajsty schować">
-<!ENTITY Ctr_tbsep_winc		"Hornje symbolowe lajsty: přidatne dźělenske linije">
+<!ENTITY Ctr_notextshadow	"Symbolowe lajsty: Sćin za tekst symboloweje lajsty a rajtarki schować">
+<!ENTITY Ctr_chevronfix		"Nawigaciska lajsta: Dwójny šipk ('Dalše nastroje') na kóncu symboloweje lajsty schować">
+<!ENTITY Ctr_tbsep_winc		"Hornje symbolowe lajsty: Přidatne dźělenske linije">
 
 <!ENTITY Ctr_closeabarbut	"Tłóčatko 'Začinić' na lajsće přidatkow schować">
 <!ENTITY Ctr_highaddonsbar	"Wysokosć powjetšić">
-<!ENTITY Ctr_lessaddonsbar	"Decrease height">
+<!ENTITY Ctr_lessaddonsbar	"Wysokosć pomjeńšić">
 <!ENTITY Ctr_addonbarfs		"W modusu połneje wobrazowki">
 
 <!ENTITY Ctr_animation		"Animacija">
@@ -338,7 +338,7 @@
 
 <!ENTITY Ctr_experttweaks	"Rozšěrjene">
 <!ENTITY Ctr_fx34search		"Znjemóžnjenje tutoho nastajenja 'stary pytanski powjerch' wobnowi.">
-<!ENTITY Ctr_fx34loop		"Znjemóžnjenje tutoho nastajenja je wotstroni.">
+<!ENTITY Ctr_fx34loop		"Znjemóžnjenje tutoho nastajenja zawołanske a konwersaciske funkcije wotstroni.">
 <!ENTITY Ctr_fx35devtheme	"Znjemóžnjenje tutych nastajenjow znjemóžni 'wuwiwarsku drastu' a jeje tłóčatko w přiměrjenskim modusu.">
 <!ENTITY Ctr_fx36prefs		"Znjemóžnjenje tutoho nastajenja stare wokno nastajenjow wobnowi.">
 <!ENTITY Ctr_fx36prefs2		"Kedźbu: Stare wokno nastajenjow njewobsahuje wšě njedawno přidate nastajenja wobhladowaka!">
