--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -237,6 +237,7 @@
 <!ENTITY Ctr_urlbardropm	"Sposta il dropmarker nella posizione più lontana possibile">
 <!ENTITY Ctr_urlbardropm2	"Dropmarker sempre visibile">
 <!ENTITY Ctr_altreaderico	"Icone alternative della modalità di lettura">
+<!ENTITY Ctr_altautocompl	"Alternative 'autocomplete popup' (experimental)">
 <!ENTITY Ctr_hideprbutton	"Nascondi l’icona di notifica quando un popup viene bloccato">
 <!ENTITY Ctr_urlbar_uc		"Disattiva il completamento automatico (preferenza in about:config)">
 <!ENTITY Ctr_locsearchbw10	"Riduci l'altezza delle barre degli indirizzi e di ricerca (sperimentale)">
