--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -237,6 +237,7 @@
 <!ENTITY Ctr_urlbardropm	"Mover flecha de despliegue a la última posición posible">
 <!ENTITY Ctr_urlbardropm2	"Hacer siempre visible la flecha de despliegue">
 <!ENTITY Ctr_altreaderico	"Iconos de 'Vista de lectura' alternativos">
+<!ENTITY Ctr_altautocompl	"Alternative 'autocomplete popup' (experimental)">
 <!ENTITY Ctr_hideprbutton	"Ocultar icono de notificación cuando se bloquee una ventana emergente">
 <!ENTITY Ctr_urlbar_uc		"Deshabilitar 'Autocompletado unificado' (about:config >> browser.urlbar.unifiedcomplete)">
 <!ENTITY Ctr_locsearchbw10	"Reducir altura de la barra de direcciones y la barra de búsqueda (experimental)">
