--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -71,7 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"Скрыть для одной вкладки">
 <!ENTITY Ctr_closei_def		"Стандартный значок">
 <!ENTITY Ctr_closeonleft	"Альтернативная позиция на вкладке">
-<!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
+<!ENTITY Ctr_closetabbig	"Увеличенный значок (20x20 пикс.)">
 <!ENTITY Ctr_close_wwltab	"Закрыть окно при закрытии последней вкладки (настройка about:config)">
 
 <!ENTITY Ctr_hctpinfotab	"Некоторые разновидности вкладок несовместимы с расширением 'Hide Caption Titlebar Plus'.">
@@ -171,18 +171,18 @@
 <!ENTITY Ctr_am_compact		"Список дополнений: компактный вид">
 <!ENTITY Ctr_am_compact2	"Компактный вид +">
 <!ENTITY Ctr_am_highlight	"Список дополнений: выделять элемент при наведении">
-<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
-<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
+<!ENTITY Ctr_am_buticons	"Список дополнений: заменить надписи на кнопках иконками">
+<!ENTITY Ctr_am_hovshowb	"Список дополнений: показывать кнопки только при наведении мыши">
 <!ENTITY Ctr_addonversion	"Список дополнений: показывать версии дополнений">
 <!ENTITY Ctr_xpinstallui	"Старое окно установки дополнений (настройка about:config)">
 <!ENTITY Ctr_bmbutton		"Кнопка меню закладок">
-<!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
-<!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
-<!ENTITY Ctr_bmbutpanelm	"Всплывающее окно: вид панели меню">
-<!ENTITY Ctr_bmbunsortbm	"Всплывающее окно: подменю «Неподшитые закладки»">
+<!ENTITY Ctr_hiderecentbm	"Всплывающее меню: скрыть недавно добавленные закладки">
+<!ENTITY Ctr_hideeditbm		"Звездочка закладок: скрыть всплывающее окно (если страница не в закладках)">
+<!ENTITY Ctr_bmbutpanelm	"Всплывающее меню: вид панели меню">
+<!ENTITY Ctr_bmbunsortbm	"Всплывающее меню: подменю «Неподшитые закладки»">
 <!ENTITY Ctr_bmbunsortbm2	"Меню над закладками">
-<!ENTITY Ctr_bmbviewbmtb	"Всплывающее окно: «Показать панель закладок»">
-<!ENTITY Ctr_bmbnounsort	"Всплывающее окно: скрыть «Неподшитые закладки»">
+<!ENTITY Ctr_bmbviewbmtb	"Всплывающее меню: «Показать панель закладок»">
+<!ENTITY Ctr_bmbnounsort	"Всплывающее меню: скрыть «Неподшитые закладки»">
 <!ENTITY Ctr_bmbutnotext	"Скрыть текст на панели закладок">
 <!ENTITY Ctr_skipprintpr	"Кнопка печати: пропускать предварительный просмотр">
 <!ENTITY Ctr_tbconmenu		"Контекстное меню панели инструментов: скрыть «Переместить в меню», «Удалить с панели инструментов», «Обновить/В закладки все вкладки», «Восстановить закрытую вкладку»">
@@ -237,17 +237,17 @@
 <!ENTITY Ctr_urlbardropm	"Переместить дропмаркер до последней возможной позиции">
 <!ENTITY Ctr_urlbardropm2	"Всегда показывать дропмаркер">
 <!ENTITY Ctr_altreaderico	"Альтернативный значок «Чтения»">
-<!ENTITY Ctr_altautocompl	"Alternative 'autocomplete popup' (experimental)">
+<!ENTITY Ctr_altautocompl	"Альтернативное «всплывающее меню автозаполнения» (экспериментально)">
 <!ENTITY Ctr_hideprbutton	"Скрыть значок уведомления, когда блокируется всплывающее окно">
-<!ENTITY Ctr_urlbar_uc		"Disable 'Unified autocomplete' feature (about:config preference)">
+<!ENTITY Ctr_urlbar_uc		"Отключить функцию «автозаполнение» (настройка about:config)">
 <!ENTITY Ctr_locsearchbw10	"Уменьшить высоту панелей адреса и поиска (экспериментально)">
 <!ENTITY Ctr_urlbar_ib		"Кнопка подлинности сайта">
 <!ENTITY Ctr_ib_nohovcolor	"Не показывать серый цвет при наведении">
 <!ENTITY Ctr_ib_graycolor	"Серый цвет для неопознанных и «Сhrome» страниц">
 <!ENTITY Ctr_verifiedcolors	"Цвет кнопки для проверенных веб-сайтов, защищённых и не защищённых соединений">
-<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
-<!ENTITY Ctr_ibinfoico2		"Hide 'i'-icon (if possible)">
-<!ENTITY Ctr_iblabels		"Hide labels">
+<!ENTITY Ctr_ibinfoico		"Заменить «i»-значок на глобус">
+<!ENTITY Ctr_ibinfoico2		"Скрыть «i»-значок (если возможно)">
+<!ENTITY Ctr_iblabels		"Скрыть метки">
 <!ENTITY Ctr_faviconurl		"Значок в адресной строке">
 <!ENTITY Ctr_padlock		"Замок">
 <!ENTITY Ctr_padlock_hid	"Скрыть замок">
@@ -255,7 +255,7 @@
 <!ENTITY Ctr_padlock_cla	"классический">
 <!ENTITY Ctr_padlock_mod	"модерн">
 <!ENTITY Ctr_padlock_ext	"Значок '&brandShortName;' для допустимых 'about' страниц">
-<!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
+<!ENTITY Ctr_icopageinfo	"Фавикон/глобус/«i»-значок: при нажатии открывает окно «Информация о странице»">
 <!ENTITY Ctr_lbsbsize		"Пользовательская ширина строки адреса и поиска">
 <!ENTITY Ctr_searchbar		"Панель поиска">
 <!ENTITY Ctr_lbsugresi		"Показывать как можно больше поисковых предложений (без прокрутки)">
